TP-770: Use @Nullable from JSR-305 instead of the one from Spring. Use ThrowingRunnable interface instead of TestRun abstract class. Use Awaitility instead of Poller and Probe. Some code polish.