@@ -15,12 +15,18 @@
  */
 package com.avanza.ymer;
 
-import com.avanza.ymer.YmerConverterTestBase.ConverterTest;
-import com.gigaspaces.annotation.pojo.SpaceId;
-import com.gigaspaces.annotation.pojo.SpaceRouting;
-import org.hamcrest.Description;
-import org.hamcrest.TypeSafeMatcher;
+import static org.hamcrest.Matchers.anything;
+import static org.hamcrest.Matchers.not;
+import static org.junit.Assert.assertThrows;
+import static org.junit.Assert.fail;
+
+import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+
 import org.junit.Test;
+import org.junit.function.ThrowingRunnable;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.MongoDbFactory;
 import org.springframework.data.mongodb.core.convert.DefaultDbRefResolver;
@@ -28,25 +34,16 @@ import org.springframework.data.mongodb.core.convert.MappingMongoConverter;
 import org.springframework.data.mongodb.core.convert.MongoConverter;
 import org.springframework.data.mongodb.core.mapping.MongoMappingContext;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Map;
-
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import com.avanza.ymer.YmerConverterTestBase.ConverterTest;
+import com.gigaspaces.annotation.pojo.SpaceId;
+import com.gigaspaces.annotation.pojo.SpaceRouting;
 
 public class YmerConverterTestBaseTest {
 
 	@Test
-	public void testingIfMirroredObjectIsMirrroedPasses() throws Exception {
+	public void testingIfMirroredObjectIsMirroredPasses() throws Exception {
 		final FakeTestSuite test1 = new FakeTestSuite(new ConverterTest<>(new TestSpaceObject("foo", "message")));
-		assertPasses(new TestRun() {
-			@Override
-			void run() {
-				test1.canMirrorSpaceObject();
-			}
-		});
+		assertPasses(test1::canMirrorSpaceObject);
 	}
 
 	@Test
@@ -55,125 +52,47 @@ public class YmerConverterTestBaseTest {
 
 		}
 		final FakeTestSuite test1 = new FakeTestSuite(new ConverterTest<>(new NonMirroredType()));
-		assertFails(new TestRun() {
-			@Override
-			void run() {
-				test1.canMirrorSpaceObject();
-			}
-		});
+		assertFails(test1::canMirrorSpaceObject);
 	}
 
 	@Test
-	public void serializationTestSucceds() throws Exception {
+	public void serializationTestSucceeds() throws Exception {
 		final FakeTestSuite test1 = new FakeTestSuite(
-				new ConverterTest<>(new TestSpaceObject("foo", "message"), new TypeSafeMatcher<TestSpaceObject>() {
-					@Override
-					public void describeTo(Description arg0) {
-					}
-
-					@Override
-					protected boolean matchesSafely(TestSpaceObject item) {
-						return true;
-					}
-				}));
-		assertPasses(new TestRun() {
-			@Override
-			void run() throws Exception {
-				test1.serializationTest();
-			}
-		});
+				new ConverterTest<>(new TestSpaceObject("foo", "message"), anything()));
+		assertPasses(test1::serializationTest);
 	}
 
 	@Test
 	public void serializationTestFails() throws Exception {
 		final FakeTestSuite test1 = new FakeTestSuite(
-				new ConverterTest<>(new TestSpaceObject("foo", "message"), new TypeSafeMatcher<TestSpaceObject>() {
-					@Override
-					public void describeTo(Description arg0) {
-					}
-
-					@Override
-					protected boolean matchesSafely(TestSpaceObject item) {
-						return false;
-					}
-				}));
-		assertFails(new TestRun() {
-			@Override
-			void run() throws Exception {
-				test1.serializationTest();
-			}
-		});
+				new ConverterTest<>(new TestSpaceObject("foo", "message"), not(anything())));
+		assertFails(test1::serializationTest);
 	}
 
 	@Test
 	public void spaceObjectWithoutIdAnnotationTestFails() throws Exception {
 		final FakeTestSuiteWithoutId test1 = new FakeTestSuiteWithoutId(
-				new ConverterTest<>(new TestSpaceObjectWithoutSpringDataIdAnnotation("foo"),
-						new TypeSafeMatcher<TestSpaceObjectWithoutSpringDataIdAnnotation>() {
-							@Override
-							public void describeTo(Description arg0) {
-							}
-
-							@Override
-							protected boolean matchesSafely(TestSpaceObjectWithoutSpringDataIdAnnotation item) {
-								return true;
-							}
-						}));
-		assertFails(new TestRun() {
-			@Override
-			void run() throws Exception {
-				test1.testFailsIfSpringDataIdAnnotationNotDefinedForSpaceObject();
-			}
-		});
+				new ConverterTest<>(new TestSpaceObjectWithoutSpringDataIdAnnotation("foo"), anything()));
+		assertFails(test1::testFailsIfSpringDataIdAnnotationNotDefinedForSpaceObject);
 	}
 
 	@Test
 	public void spaceObjectWithEmptyCollectionTestFails() throws Exception {
 		final FakeTestSuiteWithEmptyCollection test = new FakeTestSuiteWithEmptyCollection(
-			new ConverterTest<>(new TestSpaceObjectWithEmptyCollection(),
-				new TypeSafeMatcher<TestSpaceObjectWithEmptyCollection>() {
-					@Override
-					public void describeTo(Description arg0) {
-					}
+				new ConverterTest<>(new TestSpaceObjectWithEmptyCollection(), anything()));
 
-					@Override
-					protected boolean matchesSafely(TestSpaceObjectWithEmptyCollection item) {
-						return true;
-					}
-				}));
-
-		assertFails(new TestRun() {
-			@Override
-			void run() throws Exception {
-				test.testFailsIfCollectionOrMapPropertyOfTestSubjectIsEmpty();
-			}
-		});
+		assertFails(test::testFailsIfCollectionOrMapPropertyOfTestSubjectIsEmpty);
 	}
 
 	@Test
 	public void spaceObjectWithEmptyMapTestFails() throws Exception {
 		final FakeTestSuiteWithEmptyMap test = new FakeTestSuiteWithEmptyMap(
-			new ConverterTest<>(new TestSpaceObjectWithEmptyMap(),
-				new TypeSafeMatcher<TestSpaceObjectWithEmptyMap>() {
-					@Override
-					public void describeTo(Description arg0) {
-					}
+				new ConverterTest<>(new TestSpaceObjectWithEmptyMap(), anything()));
 
-					@Override
-					protected boolean matchesSafely(TestSpaceObjectWithEmptyMap item) {
-						return true;
-					}
-				}));
-
-		assertFails(new TestRun() {
-			@Override
-			void run() throws Exception {
-				test.testFailsIfCollectionOrMapPropertyOfTestSubjectIsEmpty();
-			}
-		});
+		assertFails(test::testFailsIfCollectionOrMapPropertyOfTestSubjectIsEmpty);
 	}
 
-	class FakeTestSuiteWithEmptyCollection extends YmerConverterTestBase {
+	static class FakeTestSuiteWithEmptyCollection extends YmerConverterTestBase {
 
 		public FakeTestSuiteWithEmptyCollection(ConverterTest<?> testCase) {
 			super(testCase);
@@ -182,7 +101,7 @@ public class YmerConverterTestBaseTest {
 		@Override
 		protected Collection<MirroredObjectDefinition<?>> getMirroredObjectDefinitions() {
 			DocumentPatch[] patches = {};
-			return Arrays.asList(MirroredObjectDefinition.create(TestSpaceObjectWithEmptyCollection.class).documentPatches(patches));
+			return List.of(MirroredObjectDefinition.create(TestSpaceObjectWithEmptyCollection.class).documentPatches(patches));
 		}
 
 		@Override
@@ -192,7 +111,7 @@ public class YmerConverterTestBaseTest {
 
 	}
 
-	class FakeTestSuiteWithEmptyMap extends YmerConverterTestBase {
+	static class FakeTestSuiteWithEmptyMap extends YmerConverterTestBase {
 
 		public FakeTestSuiteWithEmptyMap(ConverterTest<?> testCase) {
 			super(testCase);
@@ -201,7 +120,7 @@ public class YmerConverterTestBaseTest {
 		@Override
 		protected Collection<MirroredObjectDefinition<?>> getMirroredObjectDefinitions() {
 			DocumentPatch[] patches = {};
-			return Arrays.asList(MirroredObjectDefinition.create(TestSpaceObjectWithEmptyMap.class).documentPatches(patches));
+			return List.of(MirroredObjectDefinition.create(TestSpaceObjectWithEmptyMap.class).documentPatches(patches));
 		}
 
 		@Override
@@ -211,7 +130,7 @@ public class YmerConverterTestBaseTest {
 
 	}
 
-	class FakeTestSuite extends YmerConverterTestBase {
+	static class FakeTestSuite extends YmerConverterTestBase {
 
 		public FakeTestSuite(ConverterTest<?> testCase) {
 			super(testCase);
@@ -220,7 +139,7 @@ public class YmerConverterTestBaseTest {
 		@Override
 		protected Collection<MirroredObjectDefinition<?>> getMirroredObjectDefinitions() {
 			DocumentPatch[] patches = {};
-			return Arrays.asList(MirroredObjectDefinition.create(TestSpaceObject.class).documentPatches(patches));
+			return List.of(MirroredObjectDefinition.create(TestSpaceObject.class).documentPatches(patches));
 		}
 
 		@Override
@@ -230,7 +149,7 @@ public class YmerConverterTestBaseTest {
 
 	}
 
-	class FakeTestSuiteWithoutId extends YmerConverterTestBase {
+	static class FakeTestSuiteWithoutId extends YmerConverterTestBase {
 
 		public FakeTestSuiteWithoutId(ConverterTest<?> testCase) {
 			super(testCase);
@@ -239,7 +158,7 @@ public class YmerConverterTestBaseTest {
 		@Override
 		protected Collection<MirroredObjectDefinition<?>> getMirroredObjectDefinitions() {
 			DocumentPatch[] patches = {};
-			return Arrays.asList(MirroredObjectDefinition.create(TestSpaceObjectWithoutSpringDataIdAnnotation.class).documentPatches(patches));
+			return List.of(MirroredObjectDefinition.create(TestSpaceObjectWithoutSpringDataIdAnnotation.class).documentPatches(patches));
 		}
 
 		@Override
@@ -253,7 +172,7 @@ public class YmerConverterTestBaseTest {
 		@Id
 		String id;
 
-		Collection<String> emptyCollection = Collections.<String>emptyList();
+		Collection<String> emptyCollection = Collections.emptyList();
 
 		public String getId() {
 			return id;
@@ -277,7 +196,7 @@ public class YmerConverterTestBaseTest {
 		@Id
 		String id;
 
-		Map<String, String> map = Collections.<String, String>emptyMap();
+		Map<String, String> map = Collections.emptyMap();
 
 		public String getId() {
 			return id;
@@ -406,34 +325,22 @@ public class YmerConverterTestBaseTest {
 
 	}
 
-	private void assertFails(TestRun testRun) {
-		boolean failed = false;
-		try {
-			testRun.run();
-		} catch (AssertionError e) {
-			failed = true;
-		} catch (Exception e) {
-			e.printStackTrace();
-			failed = true;
+	private static void assertFails(ThrowingRunnable testRun) {
+		Throwable exception = assertThrows("Expected test to fail", Throwable.class, testRun);
+
+		if(!(exception instanceof AssertionError)) {
+			exception.printStackTrace();
 		}
-		assertTrue("Expected test to fail", failed);
 	}
 
-	private void assertPasses(TestRun testRun) {
+	private static void assertPasses(ThrowingRunnable testRun) {
 		try {
 			testRun.run();
-			return;
 		} catch (AssertionError e) {
 			fail("Expected test to pass");
-		} catch (Exception e) {
+		} catch (Throwable e) {
 			fail("Expected test to pass, but exception thrown");
 		}
-	}
-
-	public static abstract class TestRun {
-
-		abstract void run() throws Exception;
-
 	}
 
 }
